Site for covid-19

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
                         <a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
+                        <a href="exercises.html" class="nav-link"> Workouts</a>
+                    </li>
+                    <!-- <li class="nav-item">
                         <a class="nav-link" href="nutrition.html">Nutrition</a>
                     </li>
                     <li class="nav-item">
@@ -35,7 +38,7 @@
                     </li>
                     <li class="nav-item">
                         <a href="#" class="nav-link">FAQ</a>
-                    </li>
+                    </li> -->
                     <li class="nav-item">
                         <a class="nav-link" href="#">Contact</a>
                     </li>
@@ -56,174 +59,36 @@
         <div class="section services">
             <div class="container-fluid">
                 <h2 class="section-title mb-2 h1">What we do</h2>
-                <p class="text-center text-muted h5">Change your life, join Wolves Calisthenics.</p>
-
+                <p class="text-center text-muted h5">
+                    Your mind is your limit
+                </p>
                 <div class="row mt-5 justify-content-center">
-                    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 col-xl-4">
-                        <div class="card">
-                            <div class="front">
-                                <div class="card-image">
-                                    <img class="activator" src="img/ca1.jpg">
-                                </div>
-                                <div class="card-block">
-                                    <i class="fa fa-plus ml-2 rot"></i>
-                                    <h3 class="card-title">Introductory program</h3>
-                                    <a href="#" title="Read more" class="read-more">Read More <i class="fa fa-angle-double-right ml-2"></i></a>
+                    <div class="grid_body col-8">
+                        <img src="./img/walk.jpg" class="grid_img">
+                        <div class="grid_inner">
+                            <p>Morbi ac nisl et tellus vehicula pellentesque tincidunt vel augue. Donec lacinia velit vel elementum posuere. Donec nulla nisi, tempor ut vestibulum non, volutpat in velit. Maecenas id purus ac nunc varius consectetur.</p>
+                        </div>
+                    </div>
+                    <div class="col-4">
+                        <div class="row ml-1 mb-3">
+                            <div class="grid_body col-12">
+                                <!-- Body and text -->
+                                <img src="./img/gruop.jpg" alt="" class="grid_img">
+                                <div class="grid_inner">
+                                    <p>Training</p>
                                 </div>
                             </div>
-                            <div class="back">
-                                <div class="card-block">
-                                    <i class="fa fa-times-circle fa-lg ml-2 clrot"></i>
-                                    <h3 class="card-title">Introductory program</h3>
-                                    <p>This program is basic to learn calisthenics and the fundamentals of bodyweight exercises. This program is suitable for people who want to start calisthenics in a correct way from the most fundamental aspects.</p>
-                                    <a href="#" title="Read more" class="read-more">Read More <i class="fa fa-angle-double-right ml-2"></i></a>
+                        </div>
+                        <div class="row ml-1 mt-3">
+                            <div class="grid_body col-12">
+                                <!-- Body and text -->
+                                <img src="./img/free.jpg" alt="" class="grid_img">
+                                <div class="grid_inner">
+                                    <p>Group Activities</p>
                                 </div>
                             </div>
                         </div>
                     </div>
-
-                    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 col-xl-4">
-                        <div class="card">
-                            <div class="front">
-                                <div class="card-image">
-                                    <img class="activator" src="img/ca1.jpg">
-                                </div>
-                                <div class="card-block">
-                                    <i class="fa fa-plus ml-2 rot"></i>
-                                    <h3 class="card-title">Program for beginners</h3>
-                                    <a href="#" title="Read more" class="read-more">Read More <i class="fa fa-angle-double-right ml-2"></i></a>
-                                </div>
-                            </div>
-                            <div class="back">
-                                <div class="card-block">
-                                    <i class="fa fa-times-circle fa-lg ml-2 clrot"></i>
-                                    <h3 class="card-title">Program for beginners</h3>
-                                    <p>Start with the basics of calisthenics, this program is designed to learn the basic exercises and the best way to start gaining super human strength.</p>
-                                    <a href="#" title="Read more" class="read-more">Read More <i class="fa fa-angle-double-right ml-2"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 col-xl-4">
-                        <div class="card">
-                            <div class="front">
-                                <div class="card-image">
-                                    <img class="activator" src="img/ca1.jpg">
-                                </div>
-                                <div class="card-block">
-                                    <i class="fa fa-plus ml-2 rot"></i>
-                                    <h3 class="card-title">Intermediate Program</h3>
-                                    <a href="#" title="Read more" class="read-more">Read More <i class="fa fa-angle-double-right ml-2"></i></a>
-                                </div>
-                            </div>
-                            <div class="back">
-                                <div class="card-block">
-                                    <i class="fa fa-times-circle fa-lg ml-2 clrot"></i>
-                                    <h3 class="card-title">Intermediate Program</h3>
-                                    <p>Start to exploit your potential, this program is designed to take your workouts to another level, includes advanced exercises, challenges and a new level of strength in your workouts
-                                    </p>
-                                    <a href="#" title="Read more" class="read-more">Read More <i class="fa fa-angle-double-right ml-2"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 col-xl-4">
-                        <div class="card">
-                            <div class="front">
-                                <div class="card-image">
-                                    <img class="activator" src="img/ca1.jpg">
-                                </div>
-                                <div class="card-block">
-                                    <i class="fa fa-plus ml-2 rot"></i>
-                                    <h3 class="card-title">Advanced program</h3>
-                                    <a href="#" title="Read more" class="read-more">Read More <i class="fa fa-angle-double-right ml-2"></i></a>
-                                </div>
-                            </div>
-                            <div class="back">
-                                <div class="card-block">
-                                    <i class="fa fa-times-circle fa-lg ml-2 clrot"></i>
-                                    <h3 class="card-title">Advanced program</h3>
-                                    <p>Get super human strength. A program with routines, progressions and advanced skills that will take you to overcome your level of training, for this program it is recommended to have completed the program of beginners
-                                        and the advanced program</p>
-                                    <a href="#" title="Read more" class="read-more">Read More <i class="fa fa-angle-double-right ml-2"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 col-xl-4">
-                        <div class="card">
-                            <div class="front">
-                                <div class="card-image">
-                                    <img class="activator" src="img/ca1.jpg">
-                                </div>
-                                <div class="card-block">
-                                    <i class="fa fa-plus ml-2 rot"></i>
-                                    <h3 class="card-title">Weighted calisthenics</h3>
-                                    <a href="#" title="Read more" class="read-more">Read More <i class="fa fa-angle-double-right ml-2"></i></a>
-                                </div>
-                            </div>
-                            <div class="back">
-                                <div class="card-block">
-                                    <i class="fa fa-times-circle fa-lg ml-2 clrot"></i>
-                                    <h3 class="card-title">Weighted calisthenics</h3>
-                                    <p>Increase your strength. This program is designed to show how to start calisthenics with weight to the most advanced, such as learning to do more repetitions and have control over your strength and your body</p>
-                                    <a href="#" title="Read more" class="read-more">Read More <i class="fa fa-angle-double-right ml-2"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 col-xl-4">
-                        <div class="card">
-                            <div class="front">
-                                <div class="card-image">
-                                    <img class="activator" src="img/ca1.jpg">
-                                </div>
-                                <div class="card-block">
-                                    <i class="fa fa-plus ml-2 rot"></i>
-                                    <h3 class="card-title">Mobility and flexibility</h3>
-                                    <a href="#" title="Read more" class="read-more">Read More <i class="fa fa-angle-double-right ml-2"></i></a>
-                                </div>
-                            </div>
-                            <div class="back">
-                                <div class="card-block">
-                                    <i class="fa fa-times-circle fa-lg ml-2 clrot"></i>
-                                    <h3 class="card-title">Mobility and flexibility</h3>
-                                    <p>Learn and acquire greater mobility and flexibility in your body. Mobility is a form of movement to increase stability and the active range of movement in your joints. If you can’t control your muscles, you cannot improve
-                                        your mobility.</p>
-                                    <a href="#" title="Read more" class="read-more">Read More <i class="fa fa-angle-double-right ml-2"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
-                        <div class="card">
-                            <div class="front">
-                                <div class="card-image">
-                                    <img class="activator" src="img/ca1.jpg">
-                                </div>
-                                <div class="card-block">
-                                    <i class="fa fa-plus ml-2 rot"></i>
-                                    <h3 class="card-title">Silver wolf program</h3>
-                                    <a href="#" title="Read more" class="read-more">Read More <i class="fa fa-angle-double-right ml-2"></i></a>
-                                </div>
-                            </div>
-                            <div class="back">
-                                <div class="card-block">
-                                    <i class="fa fa-times-circle fa-lg ml-2 clrot"></i>
-                                    <h3 class="card-title">Silver wolf program</h3>
-                                    <p>Dominate your body, strength, flexibility and mobility with a single program. A complete program with all the levels of calisthenics that will allow you to learn to control your own body weight, different skills such
-                                        as handstand, front lever, back lever, among others. This program includes all the programs in one.</p>
-                                    <a href="#" title="Read more" class="read-more">Read More <i class="fa fa-angle-double-right ml-2"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
                 </div>
             </div>
         </div>
@@ -240,7 +105,7 @@
                     <div class="owl-carousel owl-theme">
                         <div class="item">
                             <div class="testimonial">
-                                <!--Avatar-->
+                                <!-- Avatar -->
                                 <div class="avatar mx-auto mb-4">
                                     <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(30).jpg" class="rounded-circle img-fluid" alt="First sample avatar image">
                                 </div>
@@ -291,9 +156,6 @@
             <div class="row d-flex text-center justify-content-center mb-md-0 mb-4">
                 <div class="col-md-8 col-12 mt-5">
                     <hr>
-                    <!-- <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi rutrum est non elit aliquet porta. Nulla in consequat neque. Cras.
-                    </p> -->
                     <p>
                         <strong>Email:</strong> Wolvescalisthenics@gmail.com<br>
                         <strong>Currently at:</strong> Masaya, Nicaragua<br>
@@ -326,7 +188,7 @@
             </div>
         </div>
 
-        <div class="footer-copyright text-center py-3">© 2018 Copyright:
+        <div class="footer-copyright text-center py-3">© 2018 Copyright
             <a href="#"> Juank Bregar Dev</a>
         </div>
     </footer>
