--- a/index.html
+++ b/index.html
@@ -63,24 +63,22 @@
                     Your mind is your limit
                 </p>
                 <div class="row mt-5 justify-content-center">
-                    <div class="grid_body col-8">
+                    <div class="grid_body col-md-8 col-sm-12">
                         <img src="./img/walk.jpg" class="grid_img">
                         <div class="grid_inner">
                             <p>Morbi ac nisl et tellus vehicula pellentesque tincidunt vel augue. Donec lacinia velit vel elementum posuere. Donec nulla nisi, tempor ut vestibulum non, volutpat in velit. Maecenas id purus ac nunc varius consectetur.</p>
                         </div>
                     </div>
-                    <div class="col-4">
-                        <div class="row ml-1 mb-3">
-                            <div class="grid_body col-12">
+                    <div class="col-md-4 col-sm-12">
+                        <div class="row ml-1">
+                            <div class="grid_body col-md-12 col-sm-6">
                                 <!-- Body and text -->
                                 <img src="./img/gruop.jpg" alt="" class="grid_img">
                                 <div class="grid_inner">
                                     <p>Training</p>
                                 </div>
                             </div>
-                        </div>
-                        <div class="row ml-1 mt-3">
-                            <div class="grid_body col-12">
+                            <div class="grid_body mt-3 col-md-12 col-sm-6">
                                 <!-- Body and text -->
                                 <img src="./img/free.jpg" alt="" class="grid_img">
                                 <div class="grid_inner">
@@ -88,6 +86,15 @@
                                 </div>
                             </div>
                         </div>
+                        <!-- <div class="row ml-1 mt-3">
+                            <div class="grid_body col-12">
+                                Body and text
+                                <img src="./img/free.jpg" alt="" class="grid_img">
+                                <div class="grid_inner">
+                                    <p>Group Activities</p>
+                                </div>
+                            </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
